# github-sbom-generator-action

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  action.yaml  get-sboms.sh  release-please-config.json
.github/: dependabot.yml
.github/lib/: gh-data.txt  test-data.txt
.github/workflows/: build.yaml  release-please.yaml  release.yaml  test.yaml
src/: main.rs
tests/: cli.rs
