[package]
name = "github-sbom-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
clap = { version = "4.2.2", features = ["derive"] }
predicates = "3.0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
